--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
    Base styles: opinionated defaults
    ========================================================================== */
 
-html {
+   html {
     color: #222;
     font-size: 1em;
     line-height: 1.4;
@@ -95,37 +95,42 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-
+/*Large Background Image*/
 html {
-  background-color: #fff;
+  background-color: #222;
   height: 100%;
+  width: 100%;
 }
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 700;
   padding: 2em;
-  font-size: 1.25em;
+  color: #fff;
   height: 100%;
 }
 
 .wrapper {
-  /*add display:flex and set justify-content to space-between*/
-  display:flex;
-  font-weight: 700;
-  justify-content:space-between;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .div-1, .div-2, .div-3 {
-  /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
-  align-items:center;
-  background-color: #f16059;
-  color: #fff;
-  display:flex;
-  font-size: 1.6em;
-  height: 300px;
+  display: flex;
   justify-content: center;
+  align-items: center;
+  color: #fff;
   line-height: 1.5em;
-  width: 30%;
+  font-size: 1.25em;
+  /* width: 30%; */
+  height: auto;
+}
+
+.wrapper span {
+  font-family: 'Lora', sans-serif;
+  font-size: 1.3em;
 }
 
 
@@ -210,6 +215,17 @@ body {
    These examples override the primary ('mobile first') styles.
    Modify as content requires.
    ========================================================================== */
+
+@media all and (min-width: 1200px) {
+    .div-1, .div-2, .div-3 {
+      flex-basis: 30%;
+    }
+
+    .div-1, .div-2 {
+      border-right: 1px solid #555;
+      padding-right: 30px;
+    }
+}
 
 @media print,
        (-webkit-min-device-pixel-ratio: 1.25),
